--- a/style.css
+++ b/style.css
@@ -1,4 +1,42 @@
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid black;
+}
+
+ul li {
+  padding: 5px 20px;
+}
+
+section {
+  padding: 10px 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 0;
+  gap: 5px;
+}
+
+input {
+  width: 20%;
+  height: 3.5vh;
+  text-indent: 5px;
+}
+
+
+
+
+/*
 #upperDiv {
   border: 2px solid red;
   height: 100%;
@@ -29,4 +67,4 @@
   color: white;
   cursor: pointer;
   border: none;
-}
+} */
