--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ ul {
   display: flex;
   flex-direction: row;
   border-bottom: 1px solid black;
+  justify-content: space-between;
+    align-items: center;
 }
 
 ul li {
@@ -32,3 +34,52 @@ input {
   height: 3.5vh;
   text-indent: 5px;
 }
+
+.All-books {
+  color: black;
+}
+
+.main-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  top: 100px;
+}
+
+.collection {
+  border: 2px solid black;
+  width: 50%;
+}
+
+.collection ul:nth-child(odd) {
+  background-color: grey;
+}
+
+.inputs {
+  margin-top: 30px;
+  width: 30%;
+}
+
+.form-values {
+  width: 100%;
+}
+
+.form-values .input-container{
+  border: 2px solid black;
+  width: 100%;
+}
+
+.form-values .btn, .remove {
+  align-self: flex-end;
+  padding: 8px 20px;
+  font-size: 17px;
+  border: 2px solid black;
+  box-shadow: 5px 7px 5px rgb(0 0 0);
+  transition: box-shadow 0.2s;
+}
+
+
+
+
