--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ input:focus {
   align-items: center;
   justify-content: center;
   padding: 20px 20px;
+  border-radius: 7px;
 }
 
 .collection {
@@ -193,6 +194,7 @@ input:focus {
   width: 100%;
   box-shadow: 1px 2px 3px;
   padding: 20px 20px;
+  border-radius: 7px;
 }
 
 .form-values div {
