--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ input:focus {
   box-shadow: 1px 2px 3px;
   padding: 20px 20px;
   border-radius: 7px;
+  box-shadow: var(--Box-shadow-outside);
 }
 
 .form-values div {
